packages/core/src/lint/grammar/lint.js
/*
 * Generated by Pegmill 0.1.0
 *
 * https://github.com/zag/pegmill
 */

'use strict'

function peg$subclass(child, parent) {
  function ctor() {
    this.constructor = child
  }
  ctor.prototype = parent.prototype
  child.prototype = new ctor()
}

function peg$SyntaxError(message, expected, found, location) {
  this.message = message
  this.expected = expected
  this.found = found
  this.location = location
  this.name = 'SyntaxError'

  if (typeof Error.captureStackTrace === 'function') {
    Error.captureStackTrace(this, peg$SyntaxError)
  }
}

peg$subclass(peg$SyntaxError, Error)

peg$SyntaxError.buildMessage = function (expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function (expectation) {
      return '"' + literalEscape(expectation.text) + '"'
    },

    class: function (expectation) {
      var escapedParts = '',
        i

      for (i = 0; i < expectation.parts.length; i++) {
        escapedParts +=
          expectation.parts[i] instanceof Array
            ? classEscape(expectation.parts[i][0]) + '-' + classEscape(expectation.parts[i][1])
            : classEscape(expectation.parts[i])
      }

      return '[' + (expectation.inverted ? '^' : '') + escapedParts + ']'
    },

    any: function (expectation) {
      return 'any character'
    },

    end: function (expectation) {
      return 'end of input'
    },

    other: function (expectation) {
      return expectation.description
    },
  }

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase()
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g, '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g, function (ch) {
        return '\\x0' + hex(ch)
      })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function (ch) {
        return '\\x' + hex(ch)
      })
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g, '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g, function (ch) {
        return '\\x0' + hex(ch)
      })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function (ch) {
        return '\\x' + hex(ch)
      })
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation)
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
      i,
      j

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i])
    }

    descriptions.sort()

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i]
          j++
        }
      }
      descriptions.length = j
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0]

      case 2:
        return descriptions[0] + ' or ' + descriptions[1]

      default:
        return descriptions.slice(0, -1).join(', ') + ', or ' + descriptions[descriptions.length - 1]
    }
  }

  function describeFound(found) {
    return found ? '"' + literalEscape(found) + '"' : 'end of input'
  }

  return 'Expected ' + describeExpected(expected) + ' but ' + describeFound(found) + ' found.'
}

function peg$parse(input, options) {
  options = options !== void 0 ? options : {}

  var peg$FAILED = {},
    peg$startRuleFunctions = { start: peg$parsestart },
    peg$startRuleFunction = peg$parsestart,
    peg$c0 = peg$anyExpectation(),
    peg$c1 = ':',
    peg$c2 = peg$literalExpectation(':', false),
    peg$c3 = '<',
    peg$c4 = peg$literalExpectation('<', false),
    peg$c5 = /^[^>]/,
    peg$c6 = peg$classExpectation(['>'], true, false),
    peg$c7 = '>',
    peg$c8 = peg$literalExpectation('>', false),
    peg$c9 = function (name, value) {
      // only a real attribute list is checked: `<` and `>` in running text or in
      // a verbatim block are not markup
      const verbatim = options._blockStack.some(b => options.isVerbatim(b.name))
      if (!options._inDirective || verbatim) return null
      const advice = 'use a non-conflicting delimiter ("...", (...), <<...>>) or plain text'
      // the mirror case: the value ended at a `>` written inside it, and the one
      // the author meant as the closing bracket is still ahead on the line
      const rest = input.slice(peg$savedPos + text().length).split(/\r?\n/)[0]
      const closedEarly = rest.indexOf('>') !== -1 && !/^[ \t]*:/.test(rest)
      if (value.indexOf('<') !== -1) {
        options.diagnostics.push({
          rule: 'attr-nested-angle',
          severity: 'error',
          message: 'attribute value contains a nested <…> that closes the attribute early; ' + advice,
          location: location(),
        })
      } else if (closedEarly) {
        options.diagnostics.push({
          rule: 'attr-nested-angle',
          severity: 'error',
          message: 'attribute value contains a > that closes the attribute early; ' + advice,
          location: location(),
        })
      }
      return null
    },
    peg$c10 = '=begin',
    peg$c11 = peg$literalExpectation('=begin', false),
    peg$c12 = function (name) {
      const top = options._blockStack[options._blockStack.length - 1]
      const verbatim = top && options.isVerbatim(top.name)
      if (verbatim) {
        // the same name closes the enclosing block early and orphans the marker after it
        if (top.name === name) {
          options.diagnostics.push({
            rule: 'delimited-block-balance',
            severity: 'error',
            message:
              '=begin ' +
              name +
              ' nested inside =begin ' +
              name +
              ' (opened at line ' +
              top.location.start.line +
              '); indent inner =begin/=end markers by one space to make them verbatim content',
            location: location(),
          })
        }
        options._inDirective = false
        return null
      }
      options._blockStack.push({ name: name, location: location() })
      options._inDirective = true
      return null
    },
    peg$c13 = '=end',
    peg$c14 = peg$literalExpectation('=end', false),
    peg$c15 = function (name) {
      const top = options._blockStack[options._blockStack.length - 1]
      // a verbatim block runs to its own =end, so any other marker inside it is content
      if (top && top.name !== name && options.isVerbatim(top.name)) {
        options._inDirective = false
        return null
      }
      if (!top) {
        options.diagnostics.push({
          rule: 'delimited-block-balance',
          severity: 'error',
          message: '=end ' + name + ' without matching =begin',
          location: location(),
        })
      } else if (top.name !== name) {
        options.diagnostics.push({
          rule: 'delimited-block-balance',
          severity: 'error',
          message:
            '=end ' + name + ' does not match =begin ' + top.name + ' (opened at line ' + top.location.start.line + ')',
          location: location(),
        })
        options._blockStack.pop()
      } else {
        options._blockStack.pop()
      }
      options._inDirective = false
      return null
    },
    peg$c16 = '=for',
    peg$c17 = peg$literalExpectation('=for', false),
    peg$c18 = function () {
      options._inDirective = true
      return null
    },
    peg$c19 = '!',
    peg$c20 = peg$literalExpectation('!', false),
    peg$c21 = function (name) {
      // any verbatim block on the stack makes this line content: markers written
      // inside such a block are an example, not structure
      const verbatim = options._blockStack.some(b => options.isVerbatim(b.name))
      if (options._inDirective && !verbatim) {
        options.diagnostics.push({
          rule: 'attr-continuation-dropped',
          severity: 'warning',
          message: 'attribute :' + name + ' on continuation line is silently dropped; flatten onto the directive line',
          location: location(),
        })
      }
      return null
    },
    peg$c22 = '(',
    peg$c23 = peg$literalExpectation('(', false),
    peg$c24 = '{',
    peg$c25 = peg$literalExpectation('{', false),
    peg$c26 = '[',
    peg$c27 = peg$literalExpectation('[', false),
    peg$c28 = "'",
    peg$c29 = peg$literalExpectation("'", false),
    peg$c30 = '"',
    peg$c31 = peg$literalExpectation('"', false),
    peg$c32 = '\uFF62',
    peg$c33 = peg$literalExpectation('\uFF62', false),
    peg$c34 = '=',
    peg$c35 = peg$literalExpectation('=', false),
    peg$c36 = /^[ \t]/,
    peg$c37 = peg$classExpectation([' ', '\t'], false, false),
    peg$c38 = '\n',
    peg$c39 = peg$literalExpectation('\n', false),
    peg$c40 = function () {
      options._inDirective = false
      return null
    },
    peg$c41 = peg$otherExpectation('identifier'),
    peg$c42 = /^[a-zA-Z]/,
    peg$c43 = peg$classExpectation(
      [
        ['a', 'z'],
        ['A', 'Z'],
      ],
      false,
      false,
    ),
    peg$c44 = /^[a-zA-Z0-9_\-]/,
    peg$c45 = peg$classExpectation([['a', 'z'], ['A', 'Z'], ['0', '9'], '_', '-'], false, false),
    peg$c46 = peg$otherExpectation('start-of-line'),
    peg$c47 = function () {
      return location().start.column === 1
    },
    peg$c48 = peg$otherExpectation('whitespace'),
    peg$currPos = 0,
    peg$savedPos = 0,
    peg$posDetailsCache = [{ line: 1, column: 1 }],
    peg$maxFailPos = 0,
    peg$maxFailExpected = [],
    peg$silentFails = 0,
    peg$result

  if ('startRule' in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error('Can\'t start parsing from rule "' + options.startRule + '".')
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule]
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos)
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos)
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location,
    )
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location)
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: 'literal', text: text, ignoreCase: ignoreCase }
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: 'class', parts: parts, inverted: inverted, ignoreCase: ignoreCase }
  }

  function peg$anyExpectation() {
    return { type: 'any' }
  }

  function peg$endExpectation() {
    return { type: 'end' }
  }

  function peg$otherExpectation(description) {
    return { type: 'other', description: description }
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos],
      p

    if (details) {
      return details
    } else {
      p = pos - 1
      while (!peg$posDetailsCache[p]) {
        p--
      }

      details = peg$posDetailsCache[p]
      details = {
        line: details.line,
        column: details.column,
      }

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++
          details.column = 1
        } else {
          details.column++
        }

        p++
      }

      peg$posDetailsCache[pos] = details
      return details
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
      endPosDetails = peg$computePosDetails(endPos)

    return {
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    }
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) {
      return
    }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos
      peg$maxFailExpected = []
    }

    peg$maxFailExpected.push(expected)
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location)
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(peg$SyntaxError.buildMessage(expected, found), expected, found, location)
  }

  function peg$parsestart() {
    var s0, s1

    s0 = []
    s1 = peg$parserule_match()
    if (s1 === peg$FAILED) {
      if (input.length > peg$currPos) {
        s1 = input.charAt(peg$currPos)
        peg$currPos++
      } else {
        s1 = peg$FAILED
        if (peg$silentFails === 0) {
          peg$fail(peg$c0)
        }
      }
    }
    while (s1 !== peg$FAILED) {
      s0.push(s1)
      s1 = peg$parserule_match()
      if (s1 === peg$FAILED) {
        if (input.length > peg$currPos) {
          s1 = input.charAt(peg$currPos)
          peg$currPos++
        } else {
          s1 = peg$FAILED
          if (peg$silentFails === 0) {
            peg$fail(peg$c0)
          }
        }
      }
    }

    return s0
  }

  function peg$parserule_match() {
    var s0

    s0 = peg$parseattr_nested_angle()
    if (s0 === peg$FAILED) {
      s0 = peg$parsedelim_begin()
      if (s0 === peg$FAILED) {
        s0 = peg$parsedelim_end()
        if (s0 === peg$FAILED) {
          s0 = peg$parseparagraph_directive()
          if (s0 === peg$FAILED) {
            s0 = peg$parsecontinuation_attr()
            if (s0 === peg$FAILED) {
              s0 = peg$parsecontinuation_marker()
              if (s0 === peg$FAILED) {
                s0 = peg$parseblank_line_marker()
                if (s0 === peg$FAILED) {
                  s0 = peg$parseline_marker()
                }
              }
            }
          }
        }
      }
    }

    return s0
  }

  function peg$parseattr_nested_angle() {
    var s0, s1, s2, s3, s4, s5, s6, s7

    s0 = peg$currPos
    if (input.charCodeAt(peg$currPos) === 58) {
      s1 = peg$c1
      peg$currPos++
    } else {
      s1 = peg$FAILED
      if (peg$silentFails === 0) {
        peg$fail(peg$c2)
      }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseidentifier()
      if (s2 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 60) {
          s3 = peg$c3
          peg$currPos++
        } else {
          s3 = peg$FAILED
          if (peg$silentFails === 0) {
            peg$fail(peg$c4)
          }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$currPos
          peg$silentFails++
          if (input.charCodeAt(peg$currPos) === 60) {
            s5 = peg$c3
            peg$currPos++
          } else {
            s5 = peg$FAILED
            if (peg$silentFails === 0) {
              peg$fail(peg$c4)
            }
          }
          peg$silentFails--
          if (s5 === peg$FAILED) {
            s4 = void 0
          } else {
            peg$currPos = s4
            s4 = peg$FAILED
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$currPos
            s6 = []
            if (peg$c5.test(input.charAt(peg$currPos))) {
              s7 = input.charAt(peg$currPos)
              peg$currPos++
            } else {
              s7 = peg$FAILED
              if (peg$silentFails === 0) {
                peg$fail(peg$c6)
              }
            }
            while (s7 !== peg$FAILED) {
              s6.push(s7)
              if (peg$c5.test(input.charAt(peg$currPos))) {
                s7 = input.charAt(peg$currPos)
                peg$currPos++
              } else {
                s7 = peg$FAILED
                if (peg$silentFails === 0) {
                  peg$fail(peg$c6)
                }
              }
            }
            if (s6 !== peg$FAILED) {
              s5 = input.substring(s5, peg$currPos)
            } else {
              s5 = s6
            }
            if (s5 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 62) {
                s6 = peg$c7
                peg$currPos++
              } else {
                s6 = peg$FAILED
                if (peg$silentFails === 0) {
                  peg$fail(peg$c8)
                }
              }
              if (s6 !== peg$FAILED) {
                peg$savedPos = s0
                s1 = peg$c9(s2, s5)
                s0 = s1
              } else {
                peg$currPos = s0
                s0 = peg$FAILED
              }
            } else {
              peg$currPos = s0
              s0 = peg$FAILED
            }
          } else {
            peg$currPos = s0
            s0 = peg$FAILED
          }
        } else {
          peg$currPos = s0
          s0 = peg$FAILED
        }
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }
    } else {
      peg$currPos = s0
      s0 = peg$FAILED
    }

    return s0
  }

  function peg$parsedelim_begin() {
    var s0, s1, s2, s3, s4

    s0 = peg$currPos
    s1 = peg$parsesol()
    if (s1 !== peg$FAILED) {
      if (input.substr(peg$currPos, 6) === peg$c10) {
        s2 = peg$c10
        peg$currPos += 6
      } else {
        s2 = peg$FAILED
        if (peg$silentFails === 0) {
          peg$fail(peg$c11)
        }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parse__()
        if (s3 !== peg$FAILED) {
          s4 = peg$parseidentifier()
          if (s4 !== peg$FAILED) {
            peg$savedPos = s0
            s1 = peg$c12(s4)
            s0 = s1
          } else {
            peg$currPos = s0
            s0 = peg$FAILED
          }
        } else {
          peg$currPos = s0
          s0 = peg$FAILED
        }
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }
    } else {
      peg$currPos = s0
      s0 = peg$FAILED
    }

    return s0
  }

  function peg$parsedelim_end() {
    var s0, s1, s2, s3, s4

    s0 = peg$currPos
    s1 = peg$parsesol()
    if (s1 !== peg$FAILED) {
      if (input.substr(peg$currPos, 4) === peg$c13) {
        s2 = peg$c13
        peg$currPos += 4
      } else {
        s2 = peg$FAILED
        if (peg$silentFails === 0) {
          peg$fail(peg$c14)
        }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parse__()
        if (s3 !== peg$FAILED) {
          s4 = peg$parseidentifier()
          if (s4 !== peg$FAILED) {
            peg$savedPos = s0
            s1 = peg$c15(s4)
            s0 = s1
          } else {
            peg$currPos = s0
            s0 = peg$FAILED
          }
        } else {
          peg$currPos = s0
          s0 = peg$FAILED
        }
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }
    } else {
      peg$currPos = s0
      s0 = peg$FAILED
    }

    return s0
  }

  function peg$parseparagraph_directive() {
    var s0, s1, s2, s3, s4

    s0 = peg$currPos
    s1 = peg$parsesol()
    if (s1 !== peg$FAILED) {
      if (input.substr(peg$currPos, 4) === peg$c16) {
        s2 = peg$c16
        peg$currPos += 4
      } else {
        s2 = peg$FAILED
        if (peg$silentFails === 0) {
          peg$fail(peg$c17)
        }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parse__()
        if (s3 !== peg$FAILED) {
          s4 = peg$parseidentifier()
          if (s4 !== peg$FAILED) {
            peg$savedPos = s0
            s1 = peg$c18()
            s0 = s1
          } else {
            peg$currPos = s0
            s0 = peg$FAILED
          }
        } else {
          peg$currPos = s0
          s0 = peg$FAILED
        }
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }
    } else {
      peg$currPos = s0
      s0 = peg$FAILED
    }

    return s0
  }

  function peg$parsecontinuation_attr() {
    var s0, s1, s2, s3, s4, s5, s6

    s0 = peg$currPos
    s1 = peg$parsesol()
    if (s1 !== peg$FAILED) {
      s2 = peg$parse__()
      if (s2 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 58) {
          s3 = peg$c1
          peg$currPos++
        } else {
          s3 = peg$FAILED
          if (peg$silentFails === 0) {
            peg$fail(peg$c2)
          }
        }
        if (s3 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 33) {
            s4 = peg$c19
            peg$currPos++
          } else {
            s4 = peg$FAILED
            if (peg$silentFails === 0) {
              peg$fail(peg$c20)
            }
          }
          if (s4 === peg$FAILED) {
            s4 = null
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$parseidentifier()
            if (s5 !== peg$FAILED) {
              s6 = peg$parsevalue_delim()
              if (s6 !== peg$FAILED) {
                peg$savedPos = s0
                s1 = peg$c21(s5)
                s0 = s1
              } else {
                peg$currPos = s0
                s0 = peg$FAILED
              }
            } else {
              peg$currPos = s0
              s0 = peg$FAILED
            }
          } else {
            peg$currPos = s0
            s0 = peg$FAILED
          }
        } else {
          peg$currPos = s0
          s0 = peg$FAILED
        }
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }
    } else {
      peg$currPos = s0
      s0 = peg$FAILED
    }

    return s0
  }

  function peg$parsevalue_delim() {
    var s0

    if (input.charCodeAt(peg$currPos) === 60) {
      s0 = peg$c3
      peg$currPos++
    } else {
      s0 = peg$FAILED
      if (peg$silentFails === 0) {
        peg$fail(peg$c4)
      }
    }
    if (s0 === peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 40) {
        s0 = peg$c22
        peg$currPos++
      } else {
        s0 = peg$FAILED
        if (peg$silentFails === 0) {
          peg$fail(peg$c23)
        }
      }
      if (s0 === peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 123) {
          s0 = peg$c24
          peg$currPos++
        } else {
          s0 = peg$FAILED
          if (peg$silentFails === 0) {
            peg$fail(peg$c25)
          }
        }
        if (s0 === peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 91) {
            s0 = peg$c26
            peg$currPos++
          } else {
            s0 = peg$FAILED
            if (peg$silentFails === 0) {
              peg$fail(peg$c27)
            }
          }
          if (s0 === peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 39) {
              s0 = peg$c28
              peg$currPos++
            } else {
              s0 = peg$FAILED
              if (peg$silentFails === 0) {
                peg$fail(peg$c29)
              }
            }
            if (s0 === peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 34) {
                s0 = peg$c30
                peg$currPos++
              } else {
                s0 = peg$FAILED
                if (peg$silentFails === 0) {
                  peg$fail(peg$c31)
                }
              }
              if (s0 === peg$FAILED) {
                if (input.charCodeAt(peg$currPos) === 65378) {
                  s0 = peg$c32
                  peg$currPos++
                } else {
                  s0 = peg$FAILED
                  if (peg$silentFails === 0) {
                    peg$fail(peg$c33)
                  }
                }
              }
            }
          }
        }
      }
    }

    return s0
  }

  function peg$parsecontinuation_marker() {
    var s0, s1, s2, s3, s4

    s0 = peg$currPos
    s1 = peg$parsesol()
    if (s1 !== peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 61) {
        s2 = peg$c34
        peg$currPos++
      } else {
        s2 = peg$FAILED
        if (peg$silentFails === 0) {
          peg$fail(peg$c35)
        }
      }
      if (s2 !== peg$FAILED) {
        s3 = []
        if (peg$c36.test(input.charAt(peg$currPos))) {
          s4 = input.charAt(peg$currPos)
          peg$currPos++
        } else {
          s4 = peg$FAILED
          if (peg$silentFails === 0) {
            peg$fail(peg$c37)
          }
        }
        if (s4 !== peg$FAILED) {
          while (s4 !== peg$FAILED) {
            s3.push(s4)
            if (peg$c36.test(input.charAt(peg$currPos))) {
              s4 = input.charAt(peg$currPos)
              peg$currPos++
            } else {
              s4 = peg$FAILED
              if (peg$silentFails === 0) {
                peg$fail(peg$c37)
              }
            }
          }
        } else {
          s3 = peg$FAILED
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0
          s1 = peg$c18()
          s0 = s1
        } else {
          peg$currPos = s0
          s0 = peg$FAILED
        }
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }
    } else {
      peg$currPos = s0
      s0 = peg$FAILED
    }

    return s0
  }

  function peg$parseblank_line_marker() {
    var s0, s1, s2, s3

    s0 = peg$currPos
    s1 = peg$parsesol()
    if (s1 !== peg$FAILED) {
      s2 = []
      if (peg$c36.test(input.charAt(peg$currPos))) {
        s3 = input.charAt(peg$currPos)
        peg$currPos++
      } else {
        s3 = peg$FAILED
        if (peg$silentFails === 0) {
          peg$fail(peg$c37)
        }
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3)
        if (peg$c36.test(input.charAt(peg$currPos))) {
          s3 = input.charAt(peg$currPos)
          peg$currPos++
        } else {
          s3 = peg$FAILED
          if (peg$silentFails === 0) {
            peg$fail(peg$c37)
          }
        }
      }
      if (s2 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 10) {
          s3 = peg$c38
          peg$currPos++
        } else {
          s3 = peg$FAILED
          if (peg$silentFails === 0) {
            peg$fail(peg$c39)
          }
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0
          s1 = peg$c40()
          s0 = s1
        } else {
          peg$currPos = s0
          s0 = peg$FAILED
        }
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }
    } else {
      peg$currPos = s0
      s0 = peg$FAILED
    }

    return s0
  }

  function peg$parseline_marker() {
    var s0, s1, s2

    s0 = peg$currPos
    s1 = peg$parsesol()
    if (s1 !== peg$FAILED) {
      if (input.length > peg$currPos) {
        s2 = input.charAt(peg$currPos)
        peg$currPos++
      } else {
        s2 = peg$FAILED
        if (peg$silentFails === 0) {
          peg$fail(peg$c0)
        }
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0
        s1 = peg$c40()
        s0 = s1
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }
    } else {
      peg$currPos = s0
      s0 = peg$FAILED
    }

    return s0
  }

  function peg$parseidentifier() {
    var s0, s1, s2, s3, s4

    peg$silentFails++
    s0 = peg$currPos
    s1 = peg$currPos
    if (peg$c42.test(input.charAt(peg$currPos))) {
      s2 = input.charAt(peg$currPos)
      peg$currPos++
    } else {
      s2 = peg$FAILED
      if (peg$silentFails === 0) {
        peg$fail(peg$c43)
      }
    }
    if (s2 !== peg$FAILED) {
      s3 = []
      if (peg$c44.test(input.charAt(peg$currPos))) {
        s4 = input.charAt(peg$currPos)
        peg$currPos++
      } else {
        s4 = peg$FAILED
        if (peg$silentFails === 0) {
          peg$fail(peg$c45)
        }
      }
      while (s4 !== peg$FAILED) {
        s3.push(s4)
        if (peg$c44.test(input.charAt(peg$currPos))) {
          s4 = input.charAt(peg$currPos)
          peg$currPos++
        } else {
          s4 = peg$FAILED
          if (peg$silentFails === 0) {
            peg$fail(peg$c45)
          }
        }
      }
      if (s3 !== peg$FAILED) {
        s2 = [s2, s3]
        s1 = s2
      } else {
        peg$currPos = s1
        s1 = peg$FAILED
      }
    } else {
      peg$currPos = s1
      s1 = peg$FAILED
    }
    if (s1 !== peg$FAILED) {
      s0 = input.substring(s0, peg$currPos)
    } else {
      s0 = s1
    }
    peg$silentFails--
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED
      if (peg$silentFails === 0) {
        peg$fail(peg$c41)
      }
    }

    return s0
  }

  function peg$parsesol() {
    var s0, s1

    peg$silentFails++
    peg$savedPos = peg$currPos
    s0 = peg$c47()
    if (s0) {
      s0 = void 0
    } else {
      s0 = peg$FAILED
    }
    peg$silentFails--
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED
      if (peg$silentFails === 0) {
        peg$fail(peg$c46)
      }
    }

    return s0
  }

  function peg$parse__() {
    var s0, s1
